--- a/Registry.toml
+++ b/Registry.toml
@@ -4,3 +4,4 @@ repo = "git@github.com:manuelbb-upb/MO_Registry.git"
 description = "Private Julia registry for various projects/packages related to mulitobjective optimization"
 
 [packages]
+88936782-c8cd-4a0f-b259-ffb12bfd2869 = { name = "Morbit", path = "M/Morbit" }
