--- a/M/Morbit/Deps.toml
+++ b/M/Morbit/Deps.toml
@@ -1,6 +1,4 @@
 [2]
-ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
-Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 DynamicPolynomials = "7c1d4256-1411-5781-91ec-d7bc3513ac07"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 FiniteDiff = "6a86dc24-6348-571c-b903-95158fe2bd41"
@@ -16,6 +14,13 @@ OSQP = "ab2f91bb-94b4-55e3-9ba0-7f65df51de79"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
-RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
+
+["2.0"]
+ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
+Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
+RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
+
+["2.1-2"]
+ThreadSafeDicts = "4239201d-c60e-5e0a-9702-85d713665ba7"
